# gan-sarg

./: main.py  pyproject.toml
arquery/: gan.py  utils.py
arquery/augmentation/: augmentation_gui.py  augmentation_list.py
