[project]
name = "gan-sarg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "lightly>=1.5.23",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "sunpy[all]>=7.1.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.1",
]
